--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -49,7 +49,7 @@
     "production": {
       "routes": [
         {
-          "pattern": "UPDATE_ME_PROD_FQDN",
+          "pattern": "uptime.vincents.cn",
           "custom_domain": true
         }
       ],
